Changes in table structure part 3

--- a/StockAll/app/src/main/res/layout/activity_nifty_companies.xml
+++ b/StockAll/app/src/main/res/layout/activity_nifty_companies.xml
@@ -7,14 +7,27 @@
     android:layout_height="match_parent"
     tools:context=".NiftyCompanies">
 
-    <MultiAutoCompleteTextView
-        android:id="@+id/resultText"
-        android:layout_width="382dp"
-        android:layout_height="572dp"
-        android:editable="false"
-        android:text="MultiAutoCompleteTextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TableLayout
+        android:id="@+id/table"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="382dp">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
