--- a/StockAll/app/src/main/res/layout/activity_main.xml
+++ b/StockAll/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
                 app:layout_constraintVertical_bias="0.871"
                 app:cardElevation="20pt">
 
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -64,7 +65,9 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.813" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -194,6 +197,7 @@
                 android:layout_height="238dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="20pt"
+                android:layout_marginBottom="20pt"
                 app:cardCornerRadius="5pt"
                 app:cardBackgroundColor="#BC3A5DB7"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -202,7 +206,43 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.135"
-                app:cardElevation="20pt"/>
+                app:cardElevation="20pt">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/heading4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#00FFFFFF"
+                        android:fontFamily="monospace"
+                        android:text="Want to invest?"
+                        android:textColor="#FFFFFF"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.501"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.126" />
+
+                    <ImageView
+                        android:id="@+id/invest"
+                        android:layout_width="304dp"
+                        android:layout_height="119dp"
+                        android:src="@drawable/zerodha"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.672"
+                        tools:srcCompat="@tools:sample/avatars" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
 
